firebase realtime database

--- a/app/src/main/res/layout/my_tv_dialog.xml
+++ b/app/src/main/res/layout/my_tv_dialog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="wrap_content" >
 
     <TextView
         android:layout_width="wrap_content"
@@ -13,6 +13,7 @@
         android:layout_centerHorizontal="true"
         />
     <RelativeLayout
+        android:id="@+id/aaaaa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/my_tv"
@@ -33,5 +34,10 @@
     </RelativeLayout>
 
     <include android:id="@+id/lay_bottom"
-        layout="@layout/view_lay_bottom" />
+        android:layout_below="@id/aaaaa"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        layout="@layout/view_lay_bottom"
+        />
 </RelativeLayout>
