--- a/app/src/main/res/layout/activity_finger_choice.xml
+++ b/app/src/main/res/layout/activity_finger_choice.xml
@@ -1,44 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FingerChoiceActivity">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <Button
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/lay_menu"
-        tools:ignore="MissingConstraints">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="HOME"
-            android:id="@+id/btn_home"
-            tools:ignore="MissingConstraints" />
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="PAUSE"
-            android:id="@+id/btn_pause"
-            android:enabled="false"
-            android:layout_below="@+id/btn_home"
-            android:visibility="gone"
-            tools:ignore="MissingConstraints" />
-    </RelativeLayout>
+        android:text="HOME"
+        android:id="@+id/btn_home" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="화면을 터치하세요"
+        android:id="@+id/tv_tmp"
         android:gravity="center"
-        tools:ignore="MissingConstraints" />
-    <TextView
+        android:layout_alignParentTop="true" />
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/tv_touch"/>
+        android:id="@+id/lay_touch">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <com.example.myapplication.MyCanvasView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/cv_finger"
+            />
+    </RelativeLayout>
+
+</RelativeLayout>
