--- a/app/src/main/res/layout/my_et_dialog.xml
+++ b/app/src/main/res/layout/my_et_dialog.xml
@@ -1,61 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 >
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <EditText
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center"
-        android:id="@+id/cd_layout"
-        tools:ignore="MissingConstraints">
+        android:id="@+id/et_name"
+        android:layout_centerHorizontal="true"
+        android:hint="Item Name" />
 
-        <EditText
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/et_score"
+        android:hint="Item Score"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/et_name" />
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/et_score"
+        android:layout_centerHorizontal="true"
+        >
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/et_name"
-            android:hint="Item Name"
-            android:layout_gravity="center"
-            android:gravity="center"
-            tools:ignore="MissingConstraints" />
+            android:id="@+id/btn_cancel"
+            android:text="취소" />
 
-        <EditText
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/et_score"
-            android:hint="Item Score"
-            android:layout_gravity="center"
-            android:gravity="center"
-            app:layout_constraintTop_toBottomOf="@id/et_name"
-            tools:ignore="MissingConstraints" />
+            android:id="@+id/btn_ok"
+            android:text="확인"
+            android:layout_toRightOf="@+id/btn_cancel"/>
+    </RelativeLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            app:layout_constraintTop_toBottomOf="@id/et_score"
-            >
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/btn_can"
-                android:text="취소"
-                android:layout_gravity="left"
-                tools:ignore="MissingConstraints" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/btn_con"
-                android:text="확인"
-                android:layout_gravity="right"
-                tools:ignore="MissingConstraints" />
-        </LinearLayout>
-    </LinearLayout>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
