prefs: companion(x) DB delete room

--- a/app/src/main/res/layout/activity_play_mode.xml
+++ b/app/src/main/res/layout/activity_play_mode.xml
@@ -4,20 +4,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:gravity="center"
     >
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ID: asdfasdf"
+        android:id="@+id/tv_my_id"
+        android:layout_margin="10dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btn_play_alone"
         android:layout_margin="10dp"
+        android:layout_centerVertical="true"
         android:text="혼자하기" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btn_play_together"
         android:layout_toRightOf="@+id/btn_play_alone"
+        android:layout_centerVertical="true"
         android:layout_margin="10dp"
         android:text="같이하기" />
 
