lobby: remove listener, spinner for gamelist, button permission
ToDo: upload/download game data, startActivity for games

--- a/app/src/main/res/layout/activity_lobby.xml
+++ b/app/src/main/res/layout/activity_lobby.xml
@@ -18,8 +18,15 @@
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/spinner_game_list"
         android:layout_centerInParent="true"
         android:spinnerMode="dropdown" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_selected_game"
+        android:textSize="40dp"
+        android:layout_centerInParent="true" />
 
     <Button
         android:layout_width="wrap_content"
