--- a/app/src/main/res/layout/activity_initial_quiz.xml
+++ b/app/src/main/res/layout/activity_initial_quiz.xml
@@ -1,55 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".InitialQuizActivity">
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lay_menu"
+        >
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_home"
+            android:src="@drawable/home_button"/>
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_pause"
+            android:src="@drawable/pause_button"
+            android:layout_alignParentRight="true"
+            android:enabled="false" />
+    </RelativeLayout>
+
     <include
         android:id="@+id/lay_time"
-        layout="@layout/view_lay_time"/>
-
-    <RelativeLayout
+        layout="@layout/view_lay_time"
+        android:layout_below="@+id/lay_menu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/lay_menu"
-        app:layout_constraintTop_toBottomOf="@id/lay_time"
-        tools:ignore="MissingConstraints">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="HOME"
-            android:id="@+id/btn_home"
-            tools:ignore="MissingConstraints" />
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="PAUSE"
-            android:id="@+id/btn_pause"
-            android:enabled="false"
-            android:visibility="gone"
-            android:layout_below="@+id/btn_home"
-            tools:ignore="MissingConstraints" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/btn_pause"
-            android:text="_____"
-            android:id="@+id/tv_best_score"
-            android:visibility="gone"
-            android:textSize="30dp"/>
-    </RelativeLayout>
+        android:layout_height="72dp"
+        android:layout_marginTop="43dp"
+        />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/lay_menu"
-        android:gravity="center"
-        tools:ignore="MissingConstraints">
+        android:layout_below="@+id/lay_time">
 
         <TextView
             android:id="@+id/tv_item"
@@ -57,39 +48,25 @@
             android:layout_height="wrap_content"
             android:text="_______"
             android:textSize="40dp"
-            android:layout_margin="10dp"
-            tools:ignore="MissingConstraints"/>
+            android:layout_centerHorizontal="true"
+            android:layout_margin="15dp" />
         <EditText
             android:id="@+id/et_answer"
-            android:layout_margin="10dp"
+            android:layout_margin="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="answer"
             android:textSize="30dp"
-            android:layout_below="@+id/tv_item"
-            tools:ignore="MissingConstraints"/>
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/tv_item" />
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="SUBMIT"
             android:id="@+id/btn_submit"
+            android:layout_margin="15dp"
+            android:layout_centerHorizontal="true"
             android:layout_below="@+id/et_answer"/>
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:ignore="MissingConstraints">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="START"
-            android:gravity="center_horizontal"
-            android:layout_alignParentRight="true"
-            android:id="@+id/btn_start"/>
-    </RelativeLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
