--- a/app/src/main/res/layout/activity_whack_a_mole.xml
+++ b/app/src/main/res/layout/activity_whack_a_mole.xml
@@ -6,39 +6,44 @@
     android:layout_height="match_parent"
     tools:context=".WhackAMoleActivity">
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lay_menu"
+        android:visibility="gone"
+        >
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_home"
+            android:src="@drawable/home_button"/>
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_pause"
+            android:src="@drawable/pause_button"
+            android:layout_alignParentRight="true"
+            android:enabled="false" />
+    </RelativeLayout>
+
     <include
         android:id="@+id/lay_time"
-        layout="@layout/view_lay_time"/>
-
-    <RelativeLayout
+        layout="@layout/view_lay_time"
+        android:layout_below="@+id/lay_menu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/lay_menu"
-        android:layout_below="@+id/lay_time" >
+        android:layout_height="72dp"
+        android:layout_marginTop="43dp"
+        />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="HOME"
-            android:id="@+id/btn_home"
-            tools:ignore="MissingConstraints" />
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="PAUSE"
-            android:id="@+id/btn_pause"
-            android:enabled="false"
-            android:layout_below="@+id/btn_home"
-            tools:ignore="MissingConstraints" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/btn_pause"
-            android:text="최고기록: ___"
-            android:id="@+id/tv_best_score"
-            android:textSize="16dp"/>
-    </RelativeLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="최고기록: ___"
+        android:id="@+id/tv_best_score"
+        android:layout_below="@id/lay_time"
+        android:textSize="16dp"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -48,7 +53,7 @@
         android:id="@+id/tv_score_wam"
         android:layout_margin="15dp"
         android:gravity="center"
-        android:layout_below="@+id/lay_time"/>
+        android:layout_below="@+id/tv_best_score" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_whack_a_mole"
@@ -57,7 +62,7 @@
         android:overScrollMode="never"
         android:orientation="vertical"
         android:visibility="invisible"
-        android:layout_below="@+id/lay_menu"
+        android:layout_below="@+id/tv_score_wam"
         android:background="@drawable/textview_edge"
         android:layout_marginTop="20dp"
         tools:listitem="@layout/recycler_whack_a_mole" />
