--- a/app/src/main/res/layout/my_et_dialog.xml
+++ b/app/src/main/res/layout/my_et_dialog.xml
@@ -11,6 +11,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/et_name"
         android:layout_centerHorizontal="true"
+        android:singleLine="true"
+        android:imeOptions="actionDone"
         android:hint="Item Name" />
 
     <EditText
