--- a/app/src/main/res/layout/activity_initial_quiz.xml
+++ b/app/src/main/res/layout/activity_initial_quiz.xml
@@ -6,27 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".InitialQuizActivity">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <include
         android:id="@+id/lay_menu"
-        android:visibility="gone"
-        >
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_home"
-            android:src="@drawable/home_button"/>
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_pause"
-            android:src="@drawable/pause_button"
-            android:layout_alignParentRight="true"
-            android:enabled="false" />
-    </RelativeLayout>
+        layout="@layout/view_lay_top" />
 
     <include
         android:id="@+id/lay_time"
@@ -34,7 +16,6 @@
         android:layout_below="@+id/lay_menu"
         android:layout_width="match_parent"
         android:layout_height="72dp"
-        android:layout_marginTop="43dp"
         />
 
     <RelativeLayout
