--- a/app/src/main/res/layout/view_lay_top.xml
+++ b/app/src/main/res/layout/view_lay_top.xml
@@ -17,6 +17,7 @@
             android:id="@+id/btn_quit"
             android:scaleType="fitCenter"
             android:src="@drawable/quit_button"
+            android:clickable="false"
             android:background="@null" />
         <TextView
             android:layout_width="wrap_content"
