--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,7 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <!-- <item name="android:statusBarColor">?attr/colorPrimaryVariant</item> -->
 
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@color/my_theme_color</item>
@@ -18,5 +18,7 @@
         <item name="android:editTextStyle">@style/customEditTextFontStyle</item>
         <item name="android:checkboxStyle">@style/customCheckboxFontStyle</item>
         <item name="android:buttonStyle">@style/defaultButtonStyle</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:statusBarColor">@color/default_button_color</item>
     </style>
 </resources>
