--- a/app/src/main/res/layout/activity_lobby.xml
+++ b/app/src/main/res/layout/activity_lobby.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".LobbyActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_seed"
+        android:text="참여코드: "
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,10 +25,19 @@
 
     <Spinner
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="70dp"
         android:id="@+id/spinner_game_list"
         android:layout_centerInParent="true"
+        android:background="@drawable/custom_button"
         android:spinnerMode="dropdown" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="게임 선택"
+        android:id="@+id/btn_game_list"
+        android:layout_centerInParent="true" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
