--- a/app/src/main/res/layout/recycler_spinner.xml
+++ b/app/src/main/res/layout/recycler_spinner.xml
@@ -3,8 +3,9 @@
 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textSize="40dp"
+    android:textSize="30dp"
     android:textAlignment="center"
-    android:layout_margin="5dp"
+    android:text="sample"
+    android:padding="5dp"
     />
 
