--- a/app/src/main/res/layout/activity_lobby.xml
+++ b/app/src/main/res/layout/activity_lobby.xml
@@ -29,6 +29,7 @@
         android:id="@+id/spinner_game_list"
         android:layout_centerInParent="true"
         android:background="@drawable/custom_button"
+        android:visibility="gone"
         android:spinnerMode="dropdown" />
 
     <Button
