--- a/app/src/main/res/layout/recycler_gamehelp.xml
+++ b/app/src/main/res/layout/recycler_gamehelp.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent" >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="두더지 잡기"
+        android:id="@+id/tv_game_title"
+        android:layout_margin="20dp"
         android:layout_centerHorizontal="true"
-        android:layout_margin="5dp"
-        android:id="@+id/tv_game_title" />
+        android:text="탭탭" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tv_game_des"
-        android:layout_below="@id/tv_game_title"
         android:layout_margin="20dp"
-        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book." />
+        android:layout_below="@+id/tv_game_title"
+        android:layout_centerHorizontal="true"
+        android:text="Lorem"/>
 
 </RelativeLayout>
