--- a/app/src/main/res/layout/viewpager_game_help.xml
+++ b/app/src/main/res/layout/viewpager_game_help.xml
@@ -22,7 +22,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_select"
+        android:id="@+id/btn_ok"
         android:layout_gravity="center_horizontal"
         android:layout_margin="20dp"
         android:text="Play" />
