--- a/app/src/main/res/layout/recycler_findnum.xml
+++ b/app/src/main/res/layout/recycler_findnum.xml
@@ -2,14 +2,23 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="60dp"
+    android:layout_margin="3dp"
+    android:background="@drawable/custom_button">
 
-    <Button
-        android:id="@+id/btn_rv_number"
+  <!--  <Button
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_margin="3dp"
         android:textSize="30dp"
-        />
+
+        />-->
+    <TextView
+        android:id="@+id/btn_rv_number"
+        android:textSize="18dp"
+        android:textColor="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
