--- a/app/src/main/res/drawable-v24/custom_radiogroup.xml
+++ b/app/src/main/res/drawable-v24/custom_radiogroup.xml
@@ -3,10 +3,10 @@
     <item>
         <shape>
             <solid android:color="#FFFFFF" />
-            <corners
-                android:topRightRadius="50dp"
+            <corners android:radius="50dp" />
+                <!--android:topRightRadius="50dp"
                 android:bottomRightRadius="50dp"
-                />
+                />-->
         </shape>
     </item>
 </selector>
