--- a/app/src/main/res/layout/my_tv_dialog.xml
+++ b/app/src/main/res/layout/my_tv_dialog.xml
@@ -13,7 +13,7 @@
         android:layout_centerHorizontal="true"
         />
     <RelativeLayout
-        android:id="@+id/aaaaa"
+        android:id="@+id/dialog_buttons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/my_tv"
@@ -34,10 +34,11 @@
     </RelativeLayout>
 
     <include android:id="@+id/lay_bottom"
-        android:layout_below="@id/aaaaa"
-        android:layout_width="match_parent"
+        android:layout_below="@id/dialog_buttons"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:layout_centerHorizontal="true"
         layout="@layout/view_lay_bottom"
         />
 </RelativeLayout>
