--- a/app/src/main/res/layout/view_lay_bottom.xml
+++ b/app/src/main/res/layout/view_lay_bottom.xml
@@ -74,7 +74,7 @@
     </RelativeLayout>
     <RelativeLayout
         android:layout_below="@+id/lay_bottom"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/lay_radiogroup_tv"
      >
